Added new notebook for analysis

--- a/Movie_Titles.ipynb
+++ b/Movie_Titles.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pprint import pprint\n",
+    "import requests\n",
     "low_memory=False"
    ]
   },
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -467,20 +468,20 @@
        "67690            122                   Drama  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Filter df to just Movies\n",
-    "recentMovies_df = recentTitles_df.loc[recentTitles_df['titleType'] == 'movie',:]\n",
+    "# Filter df to just Movies & remove Adult Movies\n",
+    "recentMovies_df = recentTitles_df.loc[(recentTitles_df['titleType'] == 'movie') & (recentTitles_df['isAdult'] == 0),:]\n",
     "recentMovies_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +697,7 @@
        "[51342 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +717,7 @@
      "output_type": "stream",
      "text": [
       "-----------------------\n",
-      "Total # Movies: 235180\n",
+      "Total # Movies: 234065\n",
       "-----------------------\n",
       "\n",
       "------\n",
@@ -758,18 +759,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save Cleaned Movie List to csv\n",
     "recentMovieTitles_df = pd.DataFrame(recentMovies_df.loc[:,['primaryTitle','startYear','genres']])\n",
-    "recentMovieTitles_df.to_csv('Resources/recentMovieTitles.csv', index=False)"
+    "recentMovieTitles_df.to_csv('Resources/recentMovieTitles.csv', index=False)\n",
+    "recentMovieTitles_df.to_csv('Resources/recentMovieTitles.csv', mode='a', header=False index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +851,7 @@
        "67690                   Drama  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
