--- a/Genre Movies Analysis.ipynb
+++ b/Genre Movies Analysis.ipynb
@@ -15,12 +15,15 @@
     "Which genres are the most profitable?\n",
     "Which genres are the least profitable?\n",
     "\n",
-    "Answering these questions give the interested producer insight into what budgets work best in terms of profitability given the type of genre and particular release time."
+    "Answering these questions give the interested producer insight into what budgets work best in terms of profitability given the type of genre and particular release time.\n",
+    "\n",
+    "## Note: \n",
+    "See notebook \"Kevin Genre Movie Analysis by Release Date.ipynb\" for a continuation of the charts.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +66,7 @@
        "1551"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +90,7 @@
        "0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +143,7 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +152,26 @@
     "# Get a count of titles for each genre\n",
     "genre_count = genre_movie_df['genre'].value_counts()\n",
     "genre_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3939"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genre_count.sum()"
    ]
   },
   {
@@ -441,7 +464,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 51% of the Total Mean Budget is comprised of Adventure, Animation, Action, Fantasy, Science Fiction. The other 49% comprises the rest of the genres."
+    "## 51% of the Total Mean Budget is comprised of Adventure, Animation, Action, Fantasy, Science Fiction. The other 49% comprises the rest of the genres.\n",
+    "This pie chart shows what genres are the most and least expensive to make. Notice Comedy and Drama roughly make up 3% of the pie chart each. These genres on average are not as expensive to make as an Adventure film and may give reason why so many more of those titles are produced (see first pie chart)."
    ]
   },
   {
@@ -544,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The bar graph demonstrates that the History, Mystery, and Horror genres give the most bang for the buck. \n",
+    "## The bar graph demonstrates that the History, Mystery, and Horror genres give the biggest bang for the buck. \n",
     "The people that made horror movie, The Blair Witch Project, come to mind. Perhaps they were aware of the above knowledge."
    ]
   },
@@ -1759,7 +1783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The above plot shows a decent positive correlation between Budget and Profit for Adventure films. This model explains 65% of the variation in Profit; however, indicated by the Flops notation, quite a few films showed close to 0 or negative profitability. With this fact, producers should perform plenty of market research before making an Adventure film."
+    "## The above plot shows a decent positive correlation between Budget and Profit for Adventure films. This model explains 65% of the variation in Profit; however, indicated by the Flops notation, quite a few films showed close to 0 or negative profitability. Given this fact, producers should perform plenty of market research before making an Adventure film."
    ]
   },
   {
